# project

./: .gitignore  readme.md
.devcontainer/: Dockerfile  devcontainer.json  postAttachCommand.sh  postCreateCommand.sh
mr_ws/: frames.gv  map1.data  my_map.yaml.pgm  my_map.yaml.yaml
mr_ws/.catkin_tools/profiles/default/: devel_collisions.txt
mr_ws/src/arm_control/: .setup_assistant  CMakeLists.txt  package.xml
mr_ws/src/arm_control/config/: chomp_planning.yaml  droid.srdf  fake_controllers.yaml  gazebo_droid.urdf  joint_limits.yaml  mapper_params_online_async.yaml  nav.rviz  new.rviz  ompl_planning.yaml  ros_controllers.yaml  rviz.rviz  simple_moveit_controllers.yaml
mr_ws/src/arm_control/launch/: amcl_launch.launch  amcl_plus_map_server.launch  demo.launch  demo_gazebo.launch  gazebo.launch  gmapping_launch.launch  move_base_launch.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  mr_arm_ik_marker.launch  navigation_main.launch  ompl-chomp_planning_pipeline.launch.xml  planning_context.launch  provide_map.launch  ros_controllers.launch  sensor_manager.launch.xml
mr_ws/src/arm_control/log/: latest_list
mr_ws/src/arm_control/maps/: class.pgm  class.yaml  classnew.pgm  classnew.yaml
mr_ws/src/arm_control/param/: base_local_planner_params.yaml  costmap_common.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
mr_ws/src/arm_control/scripts/: init_particles_caller.py
mr_ws/src/droid/: CMakeLists.txt  package.xml
mr_ws/src/droid/meshes/: base_link.stl  (+9 more)
(+7 files in other folders)
